Update from modpack optimization.

--- a/EW/Balancing/MM_AA.cfg
+++ b/EW/Balancing/MM_AA.cfg
@@ -37,6 +37,10 @@
 @PART[JerichoTrumpet]:NEEDS[SMA] {
 	-MODULE[BDACategoryModule] {}
 }
+@PART[HeavyMount]:NEEDS[SMA] {
+	-MODULE[BDACategoryModule] {}
+}
+
 @ROCKET[2.75inch]:NEEDS[SMA]:FIRST {
 	%EMP = False
 	%choker = False
