--- a/EW/Balancing/MM_MNWS.cfg
+++ b/EW/Balancing/MM_MNWS.cfg
@@ -1,3 +1,6 @@
 @PART[3XR]:NEEDS[MNWS_WEAPON&SMA] {
 	-MODULE[ModuleECMJammer] {}
 }
+@PART[3X]:NEEDS[!BurnTogether&SMA] {
+	-MODULE[BurnTogether] {}
+}
