--- a/EW/Balancing/MM_NMB.cfg
+++ b/EW/Balancing/MM_NMB.cfg
@@ -4,10 +4,20 @@
 @PART[J10C]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
+	-MODULE[JSISetInternalCameraFOV] {}
+}
+@INTERNAL[J10C]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
 }
 @PART[Type-22Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
+}
+@INTERNAL[Type22IVA]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
 }
 @PART[Type-AdvancedFlanker]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
@@ -16,31 +26,263 @@
 @PART[type-20Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
+	-MODULE[JSISetInternalCameraFOV] {}
+}
+@INTERNAL[Type20IVA]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
 }
 @PART[Type-35-Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
+@INTERNAL[Type35IVA]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+}
 @PART[SUPER-SYLPH]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
+}
+@INTERNAL[SYLPH]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
 }
 @PART[Type-57-Cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleECMJammer] {}
 	-MODULE[ModuleRadar] {}
 }
+@INTERNAL[Type57IVA]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+}
 @PART[Vipercockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
+}
+@INTERNAL[ViperIVA]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
 }
 @PART[SuperFlanker]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
+@INTERNAL[TypeFlankerIVA]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+}
 @PART[SU30cockpit]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
 }
-@PART[FA-18C]:NEEDS[NMB&SMA] {
+@PART[FA-18C]:NEEDS[!JSI&SMA] {
 	-MODULE[ModuleRadar] {}
+	-MODULE[JSIExternalCameraSelector] {}
+}
+@INTERNAL[FA-18C]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-MODULE[RasterPropMonitorComputer] {}
+}
+@PROP[NMB-MFD-F18]:NEEDS[!JSI] {
+	-MODULE[RasterPropMonitor] {}
+}
+@PROP[NMB-MFD3]:NEEDS[!JSI] {
+	-MODULE[RasterPropMonitor] {}
+}
+@PROP[NMB_RM3]:NEEDS[!JSI] {
+	-MODULE[RasterPropMonitor] {}
+	-MODULE[JSIActionGroupSwitch] {}
+}
+@PROP[NMB_RM2]:NEEDS[!JSI] {
+	-MODULE[RasterPropMonitor] {}
+	-MODULE[JSIActionGroupSwitch] {}
+}
+@PROP[NMB_RM]:NEEDS[!JSI] {
+	-MODULE[RasterPropMonitor] {}
+	-MODULE[JSIActionGroupSwitch] {}
 }
 @PART[NMB-F14D]:NEEDS[NMB&SMA] {
 	-MODULE[ModuleRadar] {}
+}
+@INTERNAL[F14D]:NEEDS[!JSI] {
+	-MODULE[JSISetInternalCameraFOV] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+	-PROP[RasterPropMonitorBasicMFD] {}
+}
+@PROP[NMB_rudderL]:NEEDS[!JSI] {
+	-MODULE[JSIVariableAnimator] {}
+}
+@PROP[NMB_rudderR]:NEEDS[!JSI] {
+	-MODULE[JSIVariableAnimator] {}
+}
+@PROP[NMB-Stick]:NEEDS[!JSI] {
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+}
+@PROP[NMB-throttle]:NEEDS[!JSI] {
+	-MODULE[JSIVariableAnimator] {}
+}
+
+@PROP[NMB_HUD]:NEEDS[!JSI] {
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+}
+@PROP[NMB_HUD2]:NEEDS[!JSI] {
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+}
+@PROP[NMB_HUD4]:NEEDS[!JSI] {
+	-MODULE[RasterPropMonitorComputer] {}
+
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+	-MODULE[JSIActionGroupSwitch] {}
+
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+	-MODULE[JSIVariableAnimator] {}
+
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
+	-MODULE[JSIVariableLabel] {}
 }
