--- a/EW/Bullets.cfg
+++ b/EW/Bullets.cfg
@@ -4,6 +4,7 @@ BULLET {
 	bulletVelocity = 950
 	bulletMass = 0.389
 	explosive = True
+	incendiary = False
     tntMass = 0.049
 	fuzeType = None 
 	projectileColor = 255, 0, 0, 128
@@ -21,6 +22,7 @@ BULLET {
 	bulletMass = 3.3
 	//HE Bullet Values
 	explosive = False
+	incendiary = False
 	tntMass = 0
 	apBulletMod = 1.52
 	bulletDragTypeName = AnalyticEstimate
@@ -39,6 +41,7 @@ BULLET {
 	bulletMass = 7
 	//HE Bullet Values
 	explosive = True
+	incendiary = False
 	tntMass = 1.14
 	apBulletMod = 1.86
 	bulletDragTypeName = AnalyticEstimate
@@ -56,6 +59,7 @@ BULLET {
 	bulletMass = 4.1
 	//HE Bullet Values
 	explosive = False
+	incendiary = False
 	tntMass = 0
 	apBulletMod = 1.13
 	bulletDragTypeName = AnalyticEstimate
@@ -73,6 +77,7 @@ BULLET {
 	bulletMass = 12.4
 	//HE Bullet Values
 	explosive = True
+	incendiary = False
 	tntMass = 1.44
 	apBulletMod = 2.37
 	bulletDragTypeName = AnalyticEstimate
@@ -89,6 +94,7 @@ BULLET {
 	bulletVelocity = 1455
 	bulletMass = 3.79
 	explosive = False
+	incendiary = False
 	tntMass = 0
 	apBulletMod = 1.38
 	bulletDragTypeName = AnalyticEstimate
@@ -106,6 +112,7 @@ BULLET {
 	bulletMass = 5.55
 	//HE Bullet Values
 	explosive = False
+	incendiary = False
 	tntMass = 0
 	apBulletMod = 1
 	bulletDragTypeName = AnalyticEstimate
@@ -123,6 +130,7 @@ BULLET {
 	bulletMass = 13
 	//HE Bullet Values
 	explosive = True
+	incendiary = False
 	tntMass = 2.28
 	apBulletMod = 2.72
 	bulletDragTypeName = AnalyticEstimate
