--- a/EW/Balancing/MM_ACockpits.cfg
+++ b/EW/Balancing/MM_ACockpits.cfg
@@ -59,7 +59,7 @@
 @INTERNAL[S39_IVA]:NEEDS[!JSI] {
 	-MODULE[JSISetInternalCameraFOV] {}
 }
-@INTERNAL[Su30IVA]:NEEDS[!JSI] {
+@INTERNAL[Su30?IVA]:NEEDS[!JSI] {
 	-MODULE[JSISetInternalCameraFOV] {}
 }
 @INTERNAL[Trainer_IVA]:NEEDS[!JSI] {
