KerbalField Optimalisation Stage 1

--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -1,6 +1,228 @@
-@PART[ShVAK-E]:NEEDS[!JSI] {
-	-MODULE[JSIExternalCameraSelector] {}
+@PART[99A2Structural]:NEEDS[KerbalField&SMA] {
+	-MODULE[ModuleRadar] {}
 }
-@PART[CROWS]:NEEDS[!JSI] {
-	-MODULE[JSIExternalCameraSelector] {}
+@PART[PSSM]:NEEDS[KerbalField&SMA] {
+	@title = 3rd-generation Stealth System Module
+	@MODULE[ModuleECMJammer] {		
+		@resourceDrain = 8
+		@jammerStrength = 100	
+		@lockBreaker = false		
+		@lockBreakerStrength = 0		
+		@rcsReductionFactor = 0.7
+	}
 }
+
+@PART[CROWS7.62]:NEEDS[SMA] {
+	@title = MG 3
+	@MODULE[ModuleWeapon] {
+		%shortName = MG 3
+		@bulletType = 7.62x54mmBullet
+	}
+}
+@PART[VickersMG]:NEEDS[SMA] {
+	@title = Vickers MG
+	@description = British 7.7 mm machine gun produced by Vickers Limited, originally for the British Army. Not to be confused with the Maxim machine gun, it was in service from before the First World War until the 1960s, with air-cooled versions of it on many Allied World War I fighter aircraft.
+	@MODULE[ModuleWeapon] {
+		%shortName = Vickers MG
+		@bulletType = 7.7x56RmmBullet
+	}
+}
+@PART[KORD]:NEEDS[SMA] {
+	@title = 6P49 Kord HMG
+	@description = The 6P49 Kord-12.7 mm heavy machine gun is a Russian design that entered service in 1998, replacing the older NSV machine gun.
+	@MODULE[ModuleWeapon] {
+		%shortName = KORD HMG
+		@bulletType = 12.7x108mmBullet
+	}
+}
+@PART[CROWS]:NEEDS[SMA] {
+	@title = M151 CROWS
+	@description = The Protector Remote Weapon Station is a remotely controlled weapons station (RWS) that can be mounted to vehicles and stationary platforms. It has been in full scale production since December 2001. It is manufactured by Kongsberg Defence Systems of Norway and Thales Group of France.
+	-MODULE[JSIExternalCameraSelector] {}
+	
+	@MODULE[ModuleWeapon] {
+		%shortName = M151 RWS MG
+		@bulletType = 12.7x99mmBullet
+	}
+}
+@PART[M2HB]:NEEDS[SMA] {
+	@title = M2HB HMG
+	@MODULE[ModuleWeapon] {
+		@bulletType = 12.7x81SRmmBulletAP; 12.7x81SRmmBulletHE
+	}
+}
+@PART[HS404]:NEEDS[SMA] {
+	@title = Hispano-Suiza HS.404
+	@MODULE[ModuleWeapon] {
+		%shortName = HS.404
+		@bulletType = 20x110mmAPShell; 20x110mmHEShell
+	}
+}
+@PART[MG151]:NEEDS[SMA] {
+	@title = MG 151/20
+	@MODULE[ModuleWeapon] {
+		%shortName = MG 151/20
+		@bulletType = 20x82mmAPShell; 20x82mmMGShell
+	}
+}
+@PART[ShVAK-E]:NEEDS[SMA] {
+	@title = 56-P-533 ShVAK MG
+	-MODULE[JSIExternalCameraSelector] {}
+	
+	@MODULE[ModuleWeapon] {
+		%shortName = 56-P-533 ShVAK MG
+		@bulletType = 20x99mmBZShell; 20x99mmOZShell
+	}
+}
+@PART[CROWS-30MM]:NEEDS[SMA] {
+	@title = CROWS 30mm HMG
+	@MODULE[ModuleWeapon] {
+		%shortName = CROWS 30mm HMG
+		@bulletType = 30x173Bullet; 30x173HEBullet
+	}
+}
+@PART[HeavyERA]:NEEDS[SMA] {
+	MODULE[HitpointTracker] {
+		HitPoints = 3000
+		maxHitPoints = 3000
+		Armor = 200
+		ArmorThickness = 200
+		ExplodeMode = Never
+	}
+	
+	MODULE[ModuleReactiveArmor] {
+        objectNames = Box001
+        textureNames = KerbalField/Parts/RU/HeavyERA
+        textureDisplayNames = ERA1
+    }
+	
+	-MODULE[BDExplosivePart] {}
+}
+
+@PART[YU6]:NEEDS[SMA] {
+	@title = Yu-6 Fish
+	@description = The Yu-6 (鱼-6) "Fish 6" torpedo is the Chinese counterpart of the US Mark 48 torpedo, and it is the first domestic Chinese torpedo designed to counter both surface ships and submarines from the very start. Guidance can be by wire, active and passive homing, or wake homing. Domestic Chinese sources have claimed that the Yu-6 torpedo is in the same class as the Mk 48 Mod. 4 torpedo, and it is believed to have been cloned from a captured sample, but official information on the Yu-6 torpedo is limited.
+	@MODULE[MissileLauncher] {
+		%shortName = Yu-6
+	}
+	-MODULE[ModuleRotor] {}
+}
+@PART[YU-7]:NEEDS[SMA] {
+	@title = Yu-7 Fish
+	@description = The Yu-7 (鱼-7) "Fish 7" torpedo is a lightweight torpedo developed by the People's Republic of China. It entered service in the 1990s as the principal anti-submarine weapon of major People's Liberation Army Navy (PLAN) warships. The Yu-7 is a derivative of the Whitehead Alenia Sistemi Subacquei (WASS) A244/S torpedo.
+	@MODULE[MissileLauncher] {
+		%shortName = Yu-7
+	}
+	-MODULE[ModuleRotor] {}
+}
+@PART[59-94]:NEEDS[SMA] {
+	@title = Type 59
+	@description = The WZ-120/Type 59 (59式) main battle tank is a Chinese-produced version of the Soviet T-54A tank, an early model of the ubiquitous T-54/55 series. The first vehicles were produced in 1958 and it was accepted into service in 1959, with serial production beginning in 1963. Over 10,000 of the tanks were produced by the time production ended in 1985 with approximately 5,500 serving with the Chinese armed forces. The tank formed the backbone of the Chinese People's Liberation Army until the early 2000s with an estimated 5,000 of the later Type 59-I and Type 59-II variants in service in 2002.
+	@MODULE[ModuleWeapon] {
+		%shortName = Type 59
+	}
+}
+@PART[89Zjq]:NEEDS[SMA] {
+	@title = Type 89 HMG
+	@description = Norinco Type 89 heavy machine gun is designed in the People's Republic of China and fires the Soviet 12.7×108mm ammunition.
+	@MODULE[ModuleWeapon] {
+		%shortName = QJZ 89
+		@bulletType = 12.7x108mmBullet
+	}
+}
+@PART[CH-100MM]:NEEDS[SMA] {
+	@title = H/PJ-87
+	@description = The H/PJ-87 / Type 210 automatic single 100 mm naval gun is the Chinese modification of the Compact model of the French 100 mm naval gun. The Type 210 was developed to make the French gun suitable for Chinese deployment and production. The French gun was incompatible with Soviet and Chinese electronics. The weapon's maximum rate of fire for a single type of unguided round was 90 rounds per minute. The rate of fire was reduced when switching between different types of ammunition.
+	@MODULE[ModuleWeapon] {
+		%shortName = Type 210
+	}
+}
+@PART[FT1250KG]:NEEDS[SMA] {
+	@title = FT-1 250kg
+	@description = The CALT FT PGB is an abbreviation for a family of Chinese built precision guided munitions named To-Fly Precision Guided Bomb. The FT PGB is actually an upgrade kit to modernize gravity bombs with precision guidance, a technology reportedly to be reverse engineered from unexploded Joint Direct Attack Munition (JDAM) ordnance in the NATO bombing of the People's Republic of China embassy in Belgrade, according to many Chinese military enthusiasts. FT series PGB was first revealed to public at the 7th Zhuhai Airshow held in November 2006 with two models of the family FT-1 and FT-3.
+	@MODULE[ModuleWeapon] {
+		%shortName = FT-1 250kg
+	}
+}
+@PART[FT1500KG]:NEEDS[SMA] {
+	@title = FT-2 500kg
+	@description = The CALT FT PGB is an abbreviation for a family of Chinese built precision guided munitions named To-Fly Precision Guided Bomb. The FT PGB is actually an upgrade kit to modernize gravity bombs with precision guidance, a technology reportedly to be reverse engineered from unexploded Joint Direct Attack Munition (JDAM) ordnance in the NATO bombing of the People's Republic of China embassy in Belgrade, according to many Chinese military enthusiasts. FT series PGB was first revealed to public at the 7th Zhuhai Airshow held in November 2006 with two models of the family FT-1 and FT-3.
+	@MODULE[ModuleWeapon] {
+		%shortName = FT-2 500kg
+	}
+}
+@PART[HHQ-10]:NEEDS[SMA] {
+	node_stack_bottom = 0.0, 0.0, -1.156, 0.0, 0.0, -1.0, 0, 1
+	@title = HQ-10 Red Banner
+	@description = The SAST HQ-10 (红旗-10) "Red Banner 10" is a short range surface-to-air missile, currently in service as a point defense missile system aboard PLA Navy warships as HHQ-10. The system was first adopted by the Liaoning aircraft carrier and the Type 056 corvette in 2011.
+	@MODULE[ModuleWeapon] {
+		%shortName = HQ-10
+	}
+}
+@PART[HHQ-10Launcher]:NEEDS[SMA] {
+	@title = HHQ-10 Launcher
+	@MODULE[ModuleWeapon] {
+		%shortName = HQ-10
+	}
+}
+@PART[H/PJ-38]:NEEDS[SMA] {
+	@title = H/PJ-45
+	@description = The ZMEERI H/PJ-38 / H/PJ-45 is a single barrel 130 mm naval gun of the Chinese Navy introduced on the Type 052D destroyer in 2005. The gun was designed by the by reverse engineering of Soviet AK-130 twin 130 mm naval gun. When the Soviet AK-130 was first successfully tried by Chinese Navy, they decided not to let the AK-130 into production, due to the AK-130 being judged as out-of-date.
+	@MODULE[ModuleWeapon] {
+		%shortName = H/PJ-45
+	}
+}
+@PART[HQ-19]:NEEDS[SMA] {
+	@title = HQ-19 Red Banner
+	@description = The HQ-19 "Red Banner 19" Surface-to-Air missilese is a vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
+	@MODULE[ModuleWeapon] {
+		%shortName = HQ-19
+	}
+}
+@PART[HQ-9]:NEEDS[SMA] {
+	@title = HQ-9 Red Banner
+	@description = The HQ-9 "Red Banner 9" is a medium-to-long range active radar homing surface-to-air missile. Similar in capability to the Russian S-300 and American Patriot systems. The naval variant, HHQ-9, appears to be identical to the land-based variant. HHQ-9 is equipped in the PLAN Type 052C Lanzhou class destroyer in VLS launch tubes.
+	@MODULE[ModuleWeapon] {
+		%shortName = HQ-9
+	}
+}
+@PART[KD20]:NEEDS[SMA] {
+	@title = KD-20 Long Sword
+	@description = The KD-20 "Long Sword 20" is an subsonic air-launched cruise missile version of the Long Sword-10, equipped with the Chinese People's Liberation Army Air Force. It can be launched by H-6M (4 pieces), H-6K (6 pieces) planes in the service of the PLA.
+	@MODULE[ModuleWeapon] {
+		%shortName = KD-20 ALCM
+	}
+}
+@PART[LD2000]:NEEDS[SMA] {
+	@title = H/PJ12 CIWS
+	@description = The H/PJ12 / Type 730 is a Chinese seven-barrelled 30 mm Gatling gun CIWS. It has a PLA Navy designation H/PJ12. It is mounted in an enclosed automatic turret and directed by radar, and electro-optical tracking systems. The maximum rate of fire is 5800 rd/m, and the effective range is up to 3 km.
+	@MODULE[ModuleWeapon] {
+		%shortName = Type 730
+	}
+}
+@PART[LS6]:NEEDS[SMA] {
+	@title = LS-6 GGB 500kg
+	@description = The EOTDC/CASC LS is an abbreviation for a family of Chinese built precision-guided munitions (PGM) named Thunder Stone Precision Guided Bomb (雷石精确制导炸弹). The LS PGB is also referred to by its gliding capability, as Thunder Stone Gliding Guided Bomb (雷石滑翔制导炸弹) or LS GGB. LS PGB is actually an upgrade kit to modernize gravity bombs with precision / laser guidance.
+	@MODULE[ModuleWeapon] {
+		%shortName = LS-6 GGB 500kg
+	}
+}
+@PART[PGZ-07]:NEEDS[SMA] {
+	@title = Type 09
+	@description = The Norinco Type 09 / PGZ09 (09式自行高射炮) is a Chinese self-propelled anti-aircraft vehicle. It is armed with two 35 millimeter cannons and optionally two fire-and-forget infrared homing missiles. It started to gradually replace the predecessor Type 95 in 2009.
+	@MODULE[ModuleWeapon] {
+		%shortName = PGZ-09
+	}
+}
+@PART[PL-10A]:NEEDS[SMA] {
+	@title = PL-10A Thunderbolt
+	@description = The EOTDC/CASC PL-10 (霹雳-10) "Thunderbolt 10" is a short-range, infrared-homing air-to-air missile (AAM) developed by the People's Republic of China. It was designed by Dr. Liang Xiaogeng (梁晓庚) at the Luoyang Electro Optical Center. Development of the missile commenced in 2004 for use on stealth fighters such as the J-20. The missile is fitted with a multi-element IIR seeker capable of +/-90 degree off boresight angles. Flight is controlled by a thrust-vector controlled solid rocket motor and free-moving type control wings on the missile's tail.
+	@MODULE[ModuleWeapon] {
+		%shortName = PL-10A
+	}
+}
+
+
+//Chinese VLS = GJB 5860-2006
+
+
