--- a/EW/Balancing/MM_MNWS.cfg
+++ b/EW/Balancing/MM_MNWS.cfg
@@ -60,9 +60,53 @@
 	@title = HQ-9 Red Banner
 	@description = The HQ-9 "Red Banner" is a medium-to-long range active radar homing surface-to-air missile. Similar in capability to the Russian S-300 and American Patriot systems. The naval variant, HHQ-9, appears to be identical to the land-based variant. HHQ-9 is equipped in the PLAN Type 052C Lanzhou class destroyer in VLS launch tubes.
 }
-@PART[HHQ19RCS]:NEEDS[SMA] {
+@PART[HHQ19RCS]:NEEDS[SMA]:FINAL {
 	@title = HQ-19 Red Banner
 	@description = A vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
+	
+	@mass = 1.5
+	@maxTemp = 5000
+	
+	@MODULE[MissileLauncher] {
+		@shortName = SC-19
+		@thrust = 80 //KN thrust during boost phase
+		@cruiseThrust = 30 //thrust during cruise phase
+		@dropTime = 0.5 //how many seconds after release until engine ignites
+		@deployTime = 1
+		%boostTime = 40 //seconds of boost phase
+		%cruiseTime = 1200 //seconds of cruise phase
+		%maxTurnRateDPS = 60 //degrees per second
+		@homingType = AAM
+		
+		%rcsThrust = 150
+		
+		%aero = true
+		%liftArea = 0.002
+		%steerMult = 30
+		%maxTorque = 120
+		%maxAoA = 180
+		%aeroSteerDamping = 30
+		
+		%DetonationDistance = 100
+        %engageAir = true
+		%engageMissile = true    
+	    %engageGround = false
+        %engageSLW = false
+		
+		@activeRadarRange = 99000
+		@terminalManeuvering = false
+		@terminalGuidanceDistance = 0
+		%terminalGuidanceShouldActivate = false
+		
+		@activeRadarLockTrackCurve
+	    {
+            @key,0 = 1000 0
+	    }
+	}
+	
+	@MODULE[BDExplosivePart] {
+		@tntMass = 210
+	}
 }
 
 @PART[LLauncher]:NEEDS[SMA] {
