--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -744,12 +744,33 @@
 }
 @PART[AFVeraSkirtMK1]:NEEDS[SMA] {
     @title = ERA Skirt
+	@MODULE[HitpointTracker] {
+		@HitPoints = 30000
+		@maxHitPoints = 30000
+		@Armor = 200
+		@ArmorThickness = 200
+		@ExplodeMode = Never
+	}
 }
 @PART[ReactivePanelPrototype]:NEEDS[SMA] {
     @title = ERA Panel
+	@MODULE[HitpointTracker] {
+		@HitPoints = 9000
+		@maxHitPoints = 9000
+		@Armor = 200
+		@ArmorThickness = 200
+		@ExplodeMode = Never
+	}
 }
 @PART[ReactivePanelPrototypeS]:NEEDS[SMA] {
 	@title = ERA Panel
+	@MODULE[HitpointTracker] {
+		@HitPoints = 9000
+		@maxHitPoints = 9000
+		@Armor = 200
+		@ArmorThickness = 200
+		@ExplodeMode = Never
+	}
 }
 @PART[S125NevaMissile]:NEEDS[SMA] {
 	// Kerbal Space Program - Part Config
