--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -1139,6 +1139,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@MODULE[ModuleRadar] {
+		@resourceDrain = 0
 		radarGroundClutterFactor = 1			// how much is the radar efficiency reduced to by ground clutter/look-down?
 		radarDetectionCurve {
 			key = 0 0
@@ -1158,6 +1159,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@MODULE[ModuleRadar] {
+		@resourceDrain = 0
 		radarGroundClutterFactor = 1			// how much is the radar efficiency reduced to by ground clutter/look-down?
 		@maxLocks = 5
 		radarDetectionCurve {
